2006-01-18 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b8

 * Security-Fix: Fullname for users was not sanitized.
                 Thus an unnince user could do a XSS injection
	         as the fullname is displayed when owner is displayed.
   Thanks to Peter Schumacher!

 * Fix: 'fitToWindow' was broken for Internet Explorer.
   Thanks to petorian from forum.

2006-01-17 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.2-RC3-cvs-b7

 * Fix: applets work again in Joomla-embeded mode. Thanks Mike Henin.

2006-01-13 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b6

 * Change: Added css for subalbumtree and tree element to have same appearance as in 1.5.1

2006-01-13 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b5

 * Fix: Substitution function for glob() for PHP<4.3 returned . and .. which broke zipdownload.

2006-01-11 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b4

 * Fix: Due to my regexp UNknowledge Pelles hints in RC2-cvs-b16 broke upload with netPBM.

2006-01-11 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b3

 * Fix: fitToResize in view_photo should not be applied to movies :)
   Thanks rebdrew from forums.

2006-01-10 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b2

 * Fix: OOoops, german in config wizard.
   Thanks to Bart.

2006-01-10 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b1

 * Fix: galleryImage() in setup/check_versions.php should be gImage()

 * Fix: check_imagemagick.php and setup/check_netpbm.php just check for existence of config.php,
	instead of doing proper test. Using gallerySanityCheck() now.

 * Change: Removed function error_row_wrap(),just use gallery_error() in confirm.inc.

2006-01-09 Chris Kelly <ckdake@ckdake.com> 1.5.2-RC2

 * Release: 1.5.2-RC2

2006-01-09 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b16

 * Change: "pimp my code" in lib/imageManipulation.php
   - Use separate internal var $stripProfiles instead of override $keepProfiles
   - Use technically correct escaping in regexp. Thanks to Pelle.
   - Use execwrapper instead of exex_internal.
