@@ -1,6 +1,0 @@
-<?php /* $Id$ */ ?>
-<tr>
- <td colspan=2>
-  <?php echo gallery_error($error) ?>
- </td>
-</tr>
