@@ -1,3 +1,9 @@
+2006-01-19 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b9
+
+ * Change: "sanitize" fullname in new_password.php also.
+
+ * Change: removed html/errorRow.inc, move this into lib/messages
+
 2006-01-18 Jens Tkotz <jens@peino.de> 1.5.2-RC3-cvs-b8
 
  * Security-Fix: Fullname for users was not sanitized.
